// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Paper > renders correctly with round: lg, outline: 50, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-50
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-50"
      outline="50"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-50-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 50, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-50"
      outline="50"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-50-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 50, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-50-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-50"
      outline="50"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-50-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 200, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-200
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-200"
      outline="200"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-200-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 200, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-200"
      outline="200"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-200-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 200, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-200-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-200"
      outline="200"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-200-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 500, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-500
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-500"
      outline="500"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-500-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 500, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-500"
      outline="500"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-500-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 500, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-500-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-500"
      outline="500"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-500-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 700, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-700
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-700"
      outline="700"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-700-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 700, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-700"
      outline="700"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-700-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 700, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        lg-700-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-lg nb-panel--outline-700"
      outline="700"
      round="lg"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          lg-700-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 50, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-50
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-50"
      outline="50"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-50-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 50, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-50"
      outline="50"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-50-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 50, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-50-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-50"
      outline="50"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-50-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 200, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-200
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-200"
      outline="200"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-200-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 200, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-200"
      outline="200"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-200-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 200, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-200-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-200"
      outline="200"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-200-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 500, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-500
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-500"
      outline="500"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-500-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 500, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-500"
      outline="500"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-500-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 500, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-500-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-500"
      outline="500"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-500-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 700, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-700
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-700"
      outline="700"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-700-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 700, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-700"
      outline="700"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-700-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 700, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        no-700-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-no nb-panel--outline-700"
      outline="700"
      round="no"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          no-700-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 50, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-50
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-50"
      outline="50"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-50-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 50, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-50"
      outline="50"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-50-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 50, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-50-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-50"
      outline="50"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-50-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 200, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-200
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-200"
      outline="200"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-200-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 200, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-200"
      outline="200"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-200-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 200, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-200-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-200"
      outline="200"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-200-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 500, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-500
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-500"
      outline="500"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-500-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 500, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-500"
      outline="500"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-500-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 500, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-500-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-500"
      outline="500"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-500-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 700, with actions and title 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-700
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-700"
      outline="700"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-700-actions & title
        </span>
      </div>
      <div
        class="nb-demo-actions"
      >
        <button
          class="nb-button nb-button--standard nb-button--size-s nb-button--rounded-default nb-demo-w-full nb-demo-span-3"
          type="button"
          variant="standard"
        >
          Cancel
        </button>
        <button
          class="nb-button nb-button--filled nb-button--size-s nb-button--rounded-r nb-demo-w-full nb-demo-span-2"
          rounded="R"
          type="button"
          variant="filled"
        >
          Do it
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 700, with content only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-700"
      outline="700"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-700-content only
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 700, with title only 1`] = `
<div>
  <div
    class="nb-panel nb-demo-panels__panel"
  >
    <div
      class="nb-panel__title"
    >
      <h6>
        xs-700-no actions
      </h6>
    </div>
    <div
      class="nb-panel__inner nb-panel--round-xs nb-panel--outline-700"
      outline="700"
      round="xs"
    >
      <div
        class="nb-demo-block"
      >
        <span>
          xs-700-title only
        </span>
      </div>
    </div>
  </div>
</div>
`;
